--- a/config.json
+++ b/config.json
@@ -10,23 +10,42 @@
   },
   "colors": {
     "background": "#FFFFFF",
-    "timeline_line": "#2C3E50",
+    "timeline_line": "#3498DB",
     "above_items": "#3498DB",
     "below_items": "#3498DB",
     "text": "#2C3E50",
-    "date_text": "#7F8C8D"
+    "date_text": "#7F8C8D",
+    "month_boundary": "#2C3E50",
+    "month_label": "#2C3E50",
+    "year_label": "#2C3E50",
+    "year_box_fill": "#FFFFFF",
+    "year_box_outline": "#2C3E50",
+    "marker_outline": "#FFFFFF"
   },
   "fonts": {
     "family": "sans-serif",
     "title_size": 16,
     "label_size": 10,
-    "date_size": 8
+    "date_size": 8,
+    "month_label_size": 8,
+    "year_label_size": 10
   },
   "visual": {
     "timeline_line_width": 3,
     "marker_size": 20,
     "connector_line_width": 3,
+    "connector_line_alpha": 0.6,
     "vertical_spacing": 0.8,
-    "date_format_display": "%d.%m.%Y"
+    "date_format_display": "%d.%m.%Y",
+    "month_boundary_width": 0.5,
+    "month_boundary_alpha": 0.3,
+    "month_boundary_style": "--",
+    "month_label_offset": 0.08,
+    "month_label_alpha": 0.7,
+    "year_box_padding": 0.3,
+    "year_box_linewidth": 1.5,
+    "marker_outline_width": 5,
+    "event_label_offset": 0.1,
+    "event_date_offset": 0.15
   }
 }
