--- a/config.json
+++ b/config.json
@@ -1,51 +1,52 @@
 {
-  "dimensions": {
-    "width": 16,
-    "height": 10,
-    "dpi": 300,
-    "margin_left": 1.0,
-    "margin_right": 1.0,
-    "margin_top": 1.5,
-    "margin_bottom": 1.5
-  },
   "colors": {
-    "background": "#FFFFFF",
-    "timeline_line": "#3498DB",
-    "above_items": "#3498DB",
-    "below_items": "#3498DB",
-    "text": "#2C3E50",
-    "date_text": "#7F8C8D",
-    "month_boundary": "#2C3E50",
+    "above_items": "#3498db",
+    "background": "#ffffff",
+    "below_items": "#3498db",
+    "date_text": "#7f8c8d",
+    "marker_outline": "#FFFFFF",
+    "month_boundary": "#2c3e50",
     "month_label": "#2C3E50",
-    "year_label": "#2C3E50",
+    "text": "#000000",
+    "timeline_line": "#db3333",
     "year_box_fill": "#FFFFFF",
     "year_box_outline": "#2C3E50",
-    "marker_outline": "#FFFFFF"
+    "year_label": "#2C3E50"
+  },
+  "dimensions": {
+    "dpi": 300,
+    "height": 10,
+    "margin_bottom": 1.5,
+    "margin_left": 1,
+    "margin_right": 1,
+    "margin_top": 1.5,
+    "width": 16
   },
   "fonts": {
-    "family": "sans-serif",
-    "title_size": 16,
-    "label_size": 10,
-    "date_size": 8,
+    "date_size": 12,
+    "family": "Trebuchet MS",
+    "label_size": 12,
     "month_label_size": 8,
+    "title_size": 12,
     "year_label_size": 10
   },
   "visual": {
-    "timeline_line_width": 3,
-    "marker_size": 20,
-    "connector_line_width": 3,
     "connector_line_alpha": 0.6,
-    "vertical_spacing": 0.8,
+    "connector_line_width": 5,
     "date_format_display": "%d.%m.%Y",
-    "month_boundary_width": 0.5,
+    "event_date_offset": 0.15,
+    "event_label_offset": 0.1,
+    "marker_outline_width": 5,
+    "marker_size": 20,
     "month_boundary_alpha": 0.3,
     "month_boundary_style": "--",
-    "month_label_offset": 0.08,
+    "month_boundary_width": 5,
     "month_label_alpha": 0.7,
-    "year_box_padding": 0.3,
+    "month_label_offset": 0.08,
+    "timeline_line_width": 3,
+    "vertical_spacing": 0.8,
     "year_box_linewidth": 1.5,
-    "marker_outline_width": 5,
-    "event_label_offset": 0.1,
-    "event_date_offset": 0.15
+    "year_box_padding": 0.3,
+    "month_tick_height": 0.1
   }
 }
