--- a/config.json
+++ b/config.json
@@ -27,14 +27,14 @@
     "date_italic": false,
     "date_size": 12,
     "family": "Trebuchet MS",
-    "label_bold": false,
+    "label_bold": true,
     "label_italic": false,
     "label_size": 12,
     "month_label_bold": false,
     "month_label_size": 12,
     "title_size": 12,
     "year_label_bold": true,
-    "year_label_size": 10
+    "year_label_size": 12
   },
   "visual": {
     "connector_line_alpha": 0.6,
@@ -50,6 +50,7 @@
     "month_label_alpha": 0.7,
     "month_label_offset": 0.08,
     "month_tick_height": 0.1,
+    "show_dates": false,
     "timeline_line_width": 3,
     "vertical_spacing": 0.8,
     "year_box_linewidth": 1.5,
