--- a/config.json
+++ b/config.json
@@ -4,6 +4,8 @@
     "background": "#ffffff",
     "below_items": "#3498db",
     "date_text": "#7f8c8d",
+    "event_box_fill": "#FFFFFF",
+    "event_box_outline": "#3498db",
     "marker_outline": "#FFFFFF",
     "month_boundary": "#2c3e50",
     "month_label": "#2C3E50",
@@ -40,6 +42,8 @@
     "connector_line_alpha": 0.6,
     "connector_line_width": 5,
     "date_format_display": "%d.%m.%Y",
+    "event_box_linewidth": 1.5,
+    "event_box_padding": 0.4,
     "event_date_offset": 0.15,
     "event_label_offset": 0.1,
     "marker_outline_width": 5,
@@ -51,6 +55,8 @@
     "month_label_offset": 0.08,
     "month_tick_height": 0.1,
     "show_dates": false,
+    "show_event_boxes": true,
+    "show_markers": true,
     "timeline_line_width": 3,
     "vertical_spacing": 0.8,
     "year_box_linewidth": 1.5,
