--- a/config.json
+++ b/config.json
@@ -4,13 +4,13 @@
     "background": "#ffffff",
     "below_items": "#3498db",
     "date_text": "#7f8c8d",
-    "event_box_fill": "#FFFFFF",
+    "event_box_fill": "#ffffff",
     "event_box_outline": "#3498db",
     "marker_outline": "#FFFFFF",
     "month_boundary": "#2c3e50",
     "month_label": "#2C3E50",
     "text": "#000000",
-    "timeline_line": "#db3333",
+    "timeline_line": "#3498db",
     "year_box_fill": "#FFFFFF",
     "year_box_outline": "#2C3E50",
     "year_label": "#2C3E50"
@@ -32,7 +32,7 @@
     "label_bold": true,
     "label_italic": false,
     "label_size": 12,
-    "month_label_bold": false,
+    "month_label_bold": true,
     "month_label_size": 12,
     "title_size": 12,
     "year_label_bold": true,
@@ -56,9 +56,9 @@
     "month_tick_height": 0.1,
     "show_dates": false,
     "show_event_boxes": true,
-    "show_markers": true,
-    "timeline_line_width": 3,
-    "vertical_spacing": 0.8,
+    "show_markers": false,
+    "timeline_line_width": 5,
+    "vertical_spacing": 0.3,
     "year_box_linewidth": 1.5,
     "year_box_padding": 0.3
   }
