--- a/config.json
+++ b/config.json
@@ -50,13 +50,13 @@
     "marker_size": 20,
     "month_boundary_alpha": 0.3,
     "month_boundary_style": "--",
-    "month_boundary_width": 5,
+    "month_boundary_width": 2,
     "month_label_alpha": 0.7,
     "month_label_offset": 0.08,
     "month_tick_height": 0.1,
     "show_dates": false,
     "show_event_boxes": true,
-    "show_markers": false,
+    "show_markers": true,
     "timeline_line_width": 5,
     "vertical_spacing": 0.3,
     "year_box_linewidth": 1.5,
